--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,5 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+MonsterBattle-Final/UserSettings/EditorUserSettings.asset
+MonsterBattle-Final/UserSettings/EditorUserSettings.asset
